# sofa-2.0-beta

./: .env.production  .gitignore  DEPLOYMENT_CHECKLIST.md  DEV-COMMANDS.md  MISSION-DOC.md  QUICK_START.md  README.md  READY_TO_DEPLOY.md  SOFA_2.0_BLUEPRINT.md  TAILWIND-CSS-MAPPING.md  TAILWIND-MIGRATION-PLAN.md  act_learnings_and_improvements.md  add-bento-ordering.js  build.sh  dev.sh  generate-css-map.js  inspect-dark-mode.js  package.json  preview.sh  revert.md  rust-gather-beta.rs.update  rust-gather-main.rs.update  test-full.sh
sofa-summer-25-250812-working-ui/data-processing/: README.md  config.json  pyproject.toml
sofa-summer-25-250812-working-ui/data-processing/config/: pinned.json
sofa-summer-25-250812-working-ui/data-processing/data/cache/: rss_cache.json
sofa-summer-25-250812-working-ui/data-processing/src/: __init__.py
sofa-summer-25-250812-working-ui/data-processing/src/builders/: build_complete_feeds.py  build_safari_feed.py  build_security_releases.py
sofa-summer-25-250812-working-ui/data-processing/src/enrichers/: component_normalizer.py  enrich_with_smart_kev.py  extract_cve_details.py  smart_kev_detector.py
sofa-summer-25-250812-working-ui/data-processing/src/fetchers/: apple_os_releases_scraper.py  fetch_gdmf.py  fetch_security_pages.py  kev_fetcher.py
sofa-summer-25-250812-working-ui/data-processing/src/generators/: build_v2_feeds_enhanced.py  generate_rss_feeds.py
sofa-summer-25-250812-working-ui/data-processing/src/models/: models.py
sofa-summer-25-250812-working-ui/data-processing/src/pipeline/: run_sofa_pipeline.py
(+867 files in other folders)
